fixed photo and upload button alignment

--- a/SignalR.StockTicker/resource/bootstrap/css/bootstrap.css
+++ b/SignalR.StockTicker/resource/bootstrap/css/bootstrap.css
@@ -131,8 +131,7 @@ input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer;
-    text-align: left;
-}
+    }
 button[disabled],
 html input[disabled] {
   cursor: default;
